--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Welcome to gixtuh's official website!</h1>
-<button onclick="github">Github Repository</button>
-<button onclick="sratch">Scratch</button>
+<button onclick="github()">Github Repository</button>
+<button onclick="sratch()">Scratch</button>
 <script>
 
   function github() {
