--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <h1>Welcome to gixtuh's official website!</h1>
 <button onclick="github()">Github Repository</button>
 <button onclick="sratch()">Scratch</button>
+<button onclick="magic()">magic</button>
 <script>
 
   function github() {
@@ -9,6 +10,10 @@
 
   function sratch() {
     window.location.href = 'https://scratch.mit.edu/users/policerdarm111'
+  }
+
+  function magic() {
+    window.location.href = "https://gixtuh.github.io/magic.html"
   }
   
 </script>
