--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
   function magic() {
     window.location.href = "https://gixtuh.github.io/magic.html"
   }
+
+  function dvd() {
+    window.location.href = "https://gixtuh.github.io/dvd.html"
+  }
   
 </script>
