--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <button onclick="github()">Github Repository</button>
 <button onclick="sratch()">Scratch</button>
 <button onclick="magic()">magic</button>
+<button onclick="dvd()">dvd</button>
 <script>
 
   function github() {
