No longer my official website.

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
   function dvd() {
     window.location.href = "https://gixtuh.github.io/dvd.html"
   }
-  
+
+  alert("sorry, no longer my official website")
+  window.location.href = "https://gixtuh.vercel.app"
 </script>
